got skills sidebar to stick!

--- a/skills.html
+++ b/skills.html
@@ -56,11 +56,14 @@
 
         <div class="page-content">
 
-            <div class="side-bar">
+            <div class="side-bar" ID="side-bar">
                 <ul>
                     <li ID="languages-button">Languages</li>
                     <li ID="vcs-button">Version Control</li>
                     <li ID="coursework-button">Relevant Coursework</li>
+                    <li ID="libraries-button">Libraries</li>
+                    <li ID="ide-button">Development Environments</li>
+                    <li ID="adobe-button">Adobe Creative Suite</li> 
                 </ul>
             </div>
             <div class="main-content">
@@ -127,7 +130,6 @@
                 </div>
 
                 <p ID="vcs-section">Version Control</p>
-
                 <div class="accordion" id="accordionExample">
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -163,7 +165,6 @@
                 </div>
 
                 <p ID="coursework-section">Relevant Coursework</p>
-
                 <div class="accordion" id="accordionExample">
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -175,7 +176,10 @@
                         </div>
                         <div id="collapseSeven" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
-                            class description
+                            Project based class that served as an introductory to industry level object oriented software development. The aim was to give students experience with designing and writing
+                            large scale projects and adapting to changing client expectations. Projects lasted 4-6 weeks, with each week introducing a new expectation that needed to be integrated
+                            into the existing code. The class covered basic topics of object oriented programming: abstraction, encapsulation, inheritance, and polymorphism. Design patterns 
+                            were also covered.
                             </div>
                         </div>
                     </div>
@@ -190,7 +194,8 @@
                         </div>
                         <div id="collapseEight" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body">
-                            class description
+                            Introductory classes to writing and designing programs. The classes relied heavily on pair-programming, and it placed a main emphasis on designing clean code, meaning code that is
+                            readable, concise, modular, and well-documented. This class also introduced the idea of performance in terms of memory and runtime analysis.
                             </div>
                         </div>
                     </div>
@@ -205,13 +210,140 @@
                         </div>
                         <div id="collapseNine" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body">
-                            class description
+                            This class explored formal logic and its relation to functions, and how we could prove certain characteristics, such as 
+                            termination, of the programs we wrote. Some basic topics covered were formal proofs, propositional logic, and induction.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header" id="headingThree">
+                            <h2 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseDiscrete" aria-expanded="false" aria-controls="collapseDiscrete">
+                                Discrete Structures
+                            </button>
+                            </h2>
+                        </div>
+                        <div id="collapseDiscrete" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div class="card-body">
+                                Introductory course to the mathematical structures and techniques present in the field of computer science. Some major topics included counting, probability,
+                                searching and sorting algorithms, big O analysis, formal proofs, trees and graphs, modular arithmetic, binary, etc.
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <p ID="vcs-section">Libraries</p>
+                <div class="accordion" id="accordionExample">
+                    <div class="card">
+                        <div class="card-header" id="headingOne">
+                            <h2 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
+                                Bootstrap
+                            </button>
+                            </h2>
+                        </div>
+                        <div id="collapseTen" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body">
+                            I have experience using the Bootstrap front-end library, mainly through the process of creating this site.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <p ID="ide-section">Development Environments</p>
+                <div class="accordion" id="accordionExample">
+
+                        <div class="card">
+                        <div class="card-header" id="headingOne">
+                            <h2 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse14" aria-expanded="true" aria-controls="collapse14">
+                                IntelliJ
+                            </button>
+                            </h2>
+                        </div>
+                        <div id="collapse14" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body">
+                            For Java projects, this is my preferred IDE, due to the sleek straighforward user interface and the easy-to-use debugger. I have not utilized
+                            the functionality of this software to the fullest, and there is still much to learn.
+                            </div>
+                        </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse15" aria-expanded="false" aria-controls="collapse15">
+                                    Visual Studio Code
+                                </button>
+                                </h2>
+                            </div>
+                            <div id="collapse15" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    I use this IDE for all of my HTML + CSS + Javascript projects, including this website. I especially like the easy-to-use git commands integrated
+                                    into the user interface for committing changes to a local repository. As with IntelliJ, I still have much to learn when it comes to using this 
+                                    software to its full potential.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse16" aria-expanded="false" aria-controls="collapse16">
+                                    Eclipse
+                                </button>
+                                </h2>
+                            </div>
+
+                            <div id="collapse16" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    I have moderate experience using eclipse after using it for a class for a semester (Fundamentals of Computer Science II). However, I am less 
+                                    family with the features that are not directly related to the code text editor.
+                                </div>
+                            </div>
+                        </div>
+                </div>
+
+                <p ID="adobe-section">Adobe Creative Suite</p>
+                <div class="accordion" id="accordionExample">
+
+                        <div class="card">
+                        <div class="card-header" id="headingOne">
+                            <h2 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse11" aria-expanded="true" aria-controls="collapse11">
+                                Adobe XD
+                            </button>
+                            </h2>
+                        </div>
+                        <div id="collapse11" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body">
+                            I have intermediate experience with this UX/UI design/prototyping tool after creating several mockups of websites for the design class 
+                            5D fundamentals.
+                            </div>
+                        </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Adobe Illustrator
+                                </button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    I have created many graphic design projects in this software and am very familiar with the tools. These projects can be seen 
+                                    on the <a href="graphicdesign.html">Graphic Design</a> page.
+                                </div>
+                            </div>
+                        </div>
+                </div>
+
             </div>
-    </div>
+
+        </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
