--- a/skills.html
+++ b/skills.html
@@ -233,7 +233,7 @@
                     </div>
                 </div>
 
-                <p ID="vcs-section">Libraries</p>
+                <p ID="libraries-section">Libraries</p>
                 <div class="accordion" id="accordionExample">
                     <div class="card">
                         <div class="card-header" id="headingOne">
