--- a/skills.html
+++ b/skills.html
@@ -8,6 +8,8 @@
         
         <link rel="stylesheet" href="styles/skills.css" title="Skills Styles"/>
 
+        <link rel="stylesheet" href="styles/body.css" title="Page Styles"/>
+
     </head>
     <body>
         
@@ -15,7 +17,7 @@
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+              </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
