integrated body.css

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
         <link rel="stylesheet" href="styles/contact.css">
-
+        
+        <link rel="stylesheet" href="styles/body.css" type="text/css"/>
+        
         <title>About</title>
         <meta name="description" content="Studio Art page">
         <meta name="author" content="Camryn Melendez">
