--- a/experience.html
+++ b/experience.html
@@ -9,6 +9,8 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
         <link rel="stylesheet" href="styles/experience.css">
+
+        <link rel="stylesheet" href="styles/body.css" type="text/css"/>
             
         <title>Experience</title>
         <meta name="description" content="Experience page">
