--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -9,6 +9,8 @@
 
         <link rel="stylesheet" href="styles/graphicdesign.css">
 
+        <link rel="stylesheet" href="styles/body.css" type="text/css"/>
+
         <title>Graphic Design</title>
         <meta name="description" content="Studio Art page">
         <meta name="author" content="Camryn Melendez">
