--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
 
         <link rel="stylesheet" href="styles/about.css">
 
+        <link rel="stylesheet" href="styles/body.css" type="text/css"/>
+
         <title>About</title>
         <meta name="description" content="Studio Art page">
         <meta name="author" content="Camryn Melendez">
