--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
         
         <link rel="stylesheet" href="styles/skills.css" title="Skills Styles"/>
 
-        <link rel="stylesheet" href="styles/body.css" title="Page Styles"/>
+        <link rel="stylesheet" href="styles/body.css" type="text/css"/>
 
     </head>
     <body>
