--- a/studioart.html
+++ b/studioart.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="styles/studioart.css" type="text/css">
 
+    <link rel="stylesheet" href="styles/body.css" type="text/css"/>
+
     <title>Studio Art</title>
     <meta name="description" content="Studio Art page">
     <meta name="author" content="Camryn Melendez">
