updated contact me form css

--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,8 @@
             <p ID="sub-header">I would love to hear your feedback about my work.</p>
         </div>
 
+        <div class="fyi">This form is not yet functional. Pressing the submit button has no effect whatsoever.</div>
+
         <div class= "contact-form-div">
             <form ID="contact-form" name="contact-form" action="contact.html" method="post">
                 <div class="name-text-field">
@@ -79,15 +81,11 @@
                 </div>
 
                 <div class="feedback-area-field">
-                    <textarea class="feedback-input" rows="20" cols="50"></textarea>
+                    <textarea class="feedback-input" rows="10" cols="25"></textarea>
                 </div>
 
                 <input ID="submit" type="submit" value="submit" name="submit"> 
             </form>
-        </div>
-
-        <div class="fyi">
-            This form is not yet functional. Pressing the submit button has no effect whatsoever.
         </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
