--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Your CSS-->
-    <link rel="stylesheet" href="styles/index.css" tyle="text/css">
+    <link rel="stylesheet" href="styles/index.css" type="text/css">
+
+    <link rel="stylesheet" href="styles/body.css" type="text/css">
 
     <title>Camryn Melendez</title>
     <meta name="description" content="My website">
