--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,8 @@
             <p ID="sub-header">I would love to hear your feedback about my work.</p>
         </div>
 
-        <div class="fyi">This form is not yet functional. Pressing the submit button has no effect whatsoever.</div>
+        <div class="fyi">This form is not yet functional. Pressing the submit button has no effect whatsoever.<br> 
+        Please contact by emailing melendez.m@husky.neu.edu</div>
 
         <div class= "contact-form-div">
             <form ID="contact-form" name="contact-form" action="contact.html" method="post">
