--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container" >
             <div class="row">
                 <div class="card col-12 col-md-4" style="width: 18rem;">
-                    <img src="images/BlueDoor.jpg" class="card-img-top" 
+                    <img src="images/Silverware.jpg" class="card-img-top" 
                     alt="Oil pastel drawing of uniquely colored apricots" height="400">
                     <div class="card-body">
                         <h5 class="card-title">Studio Art</h5>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="card col-12 col-md-4" style="width: 18rem;">
-                    <img src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg"  class="card-img-top" 
+                    <img src="images/AssignmentOneCamrynMelendez2-04.jpg"  class="card-img-top" 
                         alt="Graphic succulent icon" height="400px" style="object-fit:cover;">
                     <div class="card-body">
                         <h5 class="card-title">Graphic Design</h5>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="card col-12 col-md-4" style="width: 18rem;">
-                    <img src="images/san diego.jpg" class="card-img-top" 
+                    <img src="images/fletcher_cove.jpg" class="card-img-top" 
                         alt="Photograph of San Diego coastline" height="400">
                     <div class="card-body">
                         <h5 class="card-title">About Me!</h5>
@@ -107,6 +107,12 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <a href="https://github.com/Camryn-Melendez" target="_blank">Github</a>
+        <a href= "about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
