--- a/skills.html
+++ b/skills.html
@@ -63,7 +63,7 @@
 
         <div class="page-content">
 
-            <div class="side-bar d-none d-sm-block" ID="side-bar">
+            <div class="side-bar d-none d-sm-inline-block" ID="side-bar">
                 <ul>
                     <li ID="languages-button">Languages</li>
                     <li ID="vcs-button">Version Control</li>
