Fixed typo in email on Contact.html

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="fyi">This form is not yet functional. Pressing the submit button has no effect whatsoever.<br> 
-        Please contact by emailing melendez.m@husky.neu.edu</div>
+        Please contact by emailing melendez.c@northeastern.edu</div>
 
         <div class= "contact-form-div">
             <form ID="contact-form" name="contact-form" action="contact.html" method="post">
